--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,9 +1,16 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/test?allowPublicKeyRetrieval=true
-spring.datasource.username=user
-spring.datasource.password=123456
+spring.config.import=optional:file:.env[.properties]
+
+
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST}/${MYSQL_DATABASE}
+spring.datasource.username=${MYSQL_USER}
+spring.datasource.password=${MYSQL_PASSWORD}
+spring.sql.init.mode=always
+
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.defer-datasource-initialization=true
+
 spring.jpa.show-sql=true
 oc.app.jwtSecret=openclassrooms
 oc.app.jwtExpirationMs=86400000
