--- a/back/pom.xml
+++ b/back/pom.xml
@@ -131,6 +131,14 @@
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.8.11</version>
+				<configuration>
+					<excludes>
+						<exclude>com/openclassrooms/starterjwt/mapper/*</exclude>
+						<exclude>com/openclassrooms/starterjwt/dto/*</exclude>
+						<exclude>com/openclassrooms/starterjwt/models/*</exclude>
+						<exclude>com/openclassrooms/starterjwt/payload/**</exclude>
+					</excludes>
+				</configuration>
 				<executions>
 					<execution>
 						<goals>
